@@ -1,1 +1,1 @@
-python3 config/py_scripts/quick_edit.py
+python3 config/py_scripts/quick_edit.py $@
