@@ -10,6 +10,39 @@
 // *********************************
 #define halt            __asm__("cli;hlt");
 
+uint8 __char_set_bit(uint8 c, uint8 pos)
+{
+    if(pos >= 8)
+        pos = 7;
+    
+    uint8 mask = 1 << pos;
+    return (c & ~mask) | (1 << pos);
+}
+uint8 __char_unset_bit(uint8 c, uint8 pos)
+{
+    if(pos >= 8)
+        pos = 7;
+    
+    uint8 mask = 1 << pos;
+    return (c & ~mask) | (0 << pos);
+}
+
+bool __char_check_bit_is_set(uint8 c, uint8 pos)
+{
+    if(pos >= 8)
+        pos = 7;
+    
+    return (c & (1 << pos));
+}
+
+bool __char_check_bit_not_set(uint8 c, uint8 pos)
+{
+    if(pos >= 8)
+        pos = 7;
+    
+    return (c & (1 << pos)) == false ? true : false;
+}
+
 uint8 grab_byte_s(uint16 bytes, uint8 pos)
 {
     /* Be safe. */
